syntax = "proto3";
package xmsg;

option go_package = "github.com/pell-chain/pellcore/x/xmsg/types";

// inbound tx finalized event
message EventInboundFinalized {
  string msg_type_url = 1;
  string xmsg_index = 2;
  string sender = 3;
  string tx_orgin = 4;
  string in_tx_hash = 6;
  string in_block_height = 7;
  string receiver = 8;
  string receiver_chain = 9;
  string new_status = 12;
  string status_message = 13;
  string sender_chain = 14;
}

// outbound tx failure event
message EventOutboundFailure {
  string msg_type_url = 1;
  string xmsg_index = 2;
  string old_status = 3;
  string new_status = 4;
}

// outbound tx successful event
message EventOutboundSuccess {
  string msg_type_url = 1;
  string xmsg_index = 2;
  string old_status = 3;
  string new_status = 4;
}

// pell sent msg event
message EventPellSent {
  string msg_type_url = 1;
  string xmsg_index = 2;
  string sender = 3;
  string sender_chain = 4;
  string in_tx_hash = 5;
  string receiver = 6;
  string receiver_chain = 7;
  string pell_tx_origin = 8;
  string pell_sender = 9;
  string pell_receiver = 10;
  int64 pell_receiver_chain_id = 11;
  string pell_message = 12;
  string pell_params = 13;
  string new_status = 14;
}

// increased xmsg gas price event
message EventXmsgGasPriceIncreased {
  string xmsg_index = 1;
  string gas_price_increase = 2;
  string additional_fees = 3;
}

// chain index event - contains the current height of the chain
message EventChainIndex {
  uint64 chain_id = 1;
  uint64 curr_height = 2;
}
